add recycler view horizontal

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,13 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
+            android:name=".Content.ContentRecyclerViewHorizontal"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
             android:name=".Content.ContentCalendar"
             android:parentActivityName=".MainActivity">
             <meta-data
