--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -61,6 +61,13 @@
                 android:value=".MainActivity" />
         </activity>
         <activity
+            android:name=".Navigation.BottomNavigation"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+        <activity
             android:name=".Content.ContentRecyclerView"
             android:parentActivityName=".MainActivity">
             <meta-data
